[gd_scene load_steps=7 format=3 uid="uid://bq8c11xjf1nct"]

[ext_resource type="Script" uid="uid://bfhjoptvad3x0" path="res://Scripts/main_menu.gd" id="1_2vk4l"]
[ext_resource type="Theme" uid="uid://cf6o5io44h03f" path="res://Elemental Adventure theme.tres" id="1_f10x6"]
[ext_resource type="Texture2D" uid="uid://48wvoyua3q5h" path="res://Sprites/fire.png" id="3_cp0ys"]
[ext_resource type="FontFile" uid="uid://dsgyxibyhxj10" path="res://PressStart2P.ttf" id="3_his25"]
[ext_resource type="Script" uid="uid://cw0rkwhlsa4te" path="res://Scripts/ServerBrowser.gd" id="5_n45e2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opfnp"]
bg_color = Color(0.296219, 0.00016776, 0.345215, 1)

[node name="Main Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_2vk4l")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")

[node name="Credits" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 630.0
grow_vertical = 0
theme = ExtResource("1_f10x6")
theme_override_font_sizes/font_size = 30
text = "make by Miguelillo223"

[node name="Version" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -630.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_f10x6")
theme_override_font_sizes/font_size = 30
text = "V8"
horizontal_alignment = 2

[node name="main menu" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.5
offset_top = -301.0
offset_right = 550.5
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")
alignment = 1

[node name="Title" type="HBoxContainer" parent="Panel/main menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
alignment = 1

[node name="Tittle" type="Label" parent="Panel/main menu/Title"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_f10x6")
text = "Elemental Adventure"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/main menu/Title"]
layout_mode = 2
theme = ExtResource("1_f10x6")
texture = ExtResource("3_cp0ys")
expand_mode = 2

[node name="Play" type="Button" parent="Panel/main menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "play"

[node name="Online" type="Button" parent="Panel/main menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Multiplayer"

[node name="option" type="Button" parent="Panel/main menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Options"

[node name="exit" type="Button" parent="Panel/main menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Exit"

[node name="Multiplayer" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -804.0
offset_top = -359.0
offset_right = 804.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")
alignment = 1

[node name="NameLabel" type="Label" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Username"
horizontal_alignment = 1

[node name="Name" type="LineEdit" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Your Username"
alignment = 1

[node name="IPLabel" type="Label" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 10
text = "IP"
horizontal_alignment = 1

[node name="IP" type="LineEdit" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Example: localhost"
alignment = 1

[node name="PortLabel" type="Label" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Port"
horizontal_alignment = 1

[node name="Port" type="LineEdit" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Example: 9999"
alignment = 1

[node name="PlayMultiplayer" type="Button" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Create
"

[node name="PlayMultiplayerClient" type="Button" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Join"

[node name="OnlineList" type="Button" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
text = "Multiplayer List"

[node name="Back2" type="Button" parent="Panel/Multiplayer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Back"

[node name="MultiplayerList" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -725.0
offset_top = -346.0
offset_right = 725.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")
alignment = 1

[node name="Label" type="Label" parent="Panel/MultiplayerList"]
layout_mode = 2
text = "Bound to lisen bradcast: true"

[node name="ServerBrowser" type="Panel" parent="Panel/MultiplayerList"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_opfnp")
script = ExtResource("5_n45e2")

[node name="List" type="VBoxContainer" parent="Panel/MultiplayerList/ServerBrowser"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="Back3" type="Button" parent="Panel/MultiplayerList"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Back"

[node name="Options" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -463.0
offset_top = -326.5
offset_right = 463.0
offset_bottom = 326.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume" type="HSlider" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
max_value = 0.8
step = 0.001

[node name="Label2" type="Label" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume 2" type="HSlider" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
max_value = 0.8
step = 0.001

[node name="CheckButton" type="CheckButton" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
text = "FullScreen"

[node name="delete data" type="Button" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Delete data
"

[node name="Back" type="Button" parent="Panel/Options"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Back"

[connection signal="pressed" from="Panel/main menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/main menu/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="Panel/main menu/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Panel/main menu/exit" to="." method="_on_exit_pressed"]
[connection signal="text_changed" from="Panel/Multiplayer/Name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="Panel/Multiplayer/IP" to="." method="_on_ip_text_changed"]
[connection signal="text_changed" from="Panel/Multiplayer/Port" to="." method="_on_port_text_changed"]
[connection signal="pressed" from="Panel/Multiplayer/PlayMultiplayer" to="." method="_on_play_multiplayer_pressed"]
[connection signal="pressed" from="Panel/Multiplayer/PlayMultiplayerClient" to="." method="_on_play_multiplayer_client_pressed"]
[connection signal="pressed" from="Panel/Multiplayer/OnlineList" to="." method="_on_online_list_pressed"]
[connection signal="pressed" from="Panel/Multiplayer/Back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="Panel/MultiplayerList/Back3" to="." method="_on_back_3_pressed"]
[connection signal="value_changed" from="Panel/Options/Volume" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Panel/Options/Volume 2" to="." method="_on_volume_2_value_changed"]
[connection signal="toggled" from="Panel/Options/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Panel/Options/delete data" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="Panel/Options/Back" to="." method="_on_back_pressed"]
